add list user function
