# golang/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/users": {
+        "/register": {
             "post": {
                 "description": "user can able create new account",
                 "consumes": [
@@ -19,7 +19,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "authen"
                 ],
                 "summary": "post users",
                 "parameters": [
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.UserCreate"
+                            "$ref": "#/definitions/entities.UserCreate"
                         }
                     }
                 ],
@@ -37,7 +37,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/entity.UserJWTModel"
+                            "$ref": "#/definitions/entities.UserJWTModel"
                         }
                     },
                     "400": {
@@ -60,10 +60,56 @@
                     }
                 }
             }
+        },
+        "/users": {
+            "get": {
+                "description": "this function must have permission administrator",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "get users",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Limit the number of users to return",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset the list of users",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.UserGet"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "entity.UserCreate": {
+        "entities.UserCreate": {
             "type": "object",
             "properties": {
                 "account": {
@@ -84,12 +130,56 @@
                 "password": {
                     "type": "string"
                 },
-                "user_id": {
+                "userid": {
                     "type": "integer"
                 }
             }
         },
-        "entity.UserJWTModel": {
+        "entities.UserGet": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "birth": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "expenditure": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "mail": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "numorder": {
+                    "type": "integer"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "userid": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entities.UserJWTModel": {
             "type": "object",
             "properties": {
                 "account": {
@@ -110,7 +200,7 @@
                 "token": {
                     "type": "string"
                 },
-                "user_id": {
+                "userid": {
                     "type": "integer"
                 }
             }
