# golang/module/user/entities/user_jwt_token.go
@@ -10,6 +10,6 @@ type UserJWTModel struct {
 	Token   string `json:"token"`
 }
 
-func (UserJWTModel) TableModel() string {
+func (UserJWTModel) TableName() string {
 	return USER_TABLE
 }
