# golang/router/user_router.go
@@ -1,0 +1,15 @@
+package router
+
+import (
+	"SpiderShop-Restfull-API/common"
+	"SpiderShop-Restfull-API/module/user/transport"
+
+	"github.com/gin-gonic/gin"
+)
+
+func getUserRouters(v1 *gin.RouterGroup, aptx *common.AppConext) {
+	user := v1.Group("/users")
+	{
+		user.GET("/", transport.ListUserTrasnport(aptx))
+	}
+}
